--- a/src/assets/desktop.ini
+++ b/src/assets/desktop.ini
@@ -8,3 +8,4 @@ Screenshot 2025-03-17 214535.png=@Screenshot 2025-03-17 214535.png,0
 Screenshot 2025-03-17 214152.png=@Screenshot 2025-03-17 214152.png,0
 Screenshot 2025-03-17 214127.png=@Screenshot 2025-03-17 214127.png,0
 Screenshot 2025-03-17 214118.png=@Screenshot 2025-03-17 214118.png,0
+Screenshot 2025-05-06 153905.png=@Screenshot 2025-05-06 153905.png,0
